# eacal

./: Cargo.toml
graphql/: class_week.graphql  current_week.graphql
src/: class_week.rs  current_week.rs  lesson.rs  lib.rs  main.rs
src/api/: class_week.rs  current_week.rs  mod.rs
src/calendar/: google_calendar.rs  mod.rs
