[package]
name = "eacal"
version = "0.1.0"
edition = "2021"


[dependencies]
graphql_client = "0.11.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = "1.0.151"
tokio = { version = "1.23.0", features = ["full"] }
chrono = "0.4.23"
anyhow = "1.0.68"
google-calendar3 = "4.0.1+20220217"
hyper = "0.14.20"
hyper-rustls = "0.23.0"
dotenv = "0.15.0"
